--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
+
+
 .mainContainer {
-  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin-bottom: 65px;
 }
 
 h1 {
@@ -13,11 +15,10 @@ h1 {
 }
 
 h1:hover {
-  transform: rotateX(25deg);
+  transform: scale(1.1);
 }
 
 form {
-  /* border: 2px solid red; */
   width: 300px;
   height: 100px;
   display: flex;
@@ -34,4 +35,75 @@ input[type='text'] {
 
 .emoji {
   font-size: 60px;
+}
+
+.searchStatus {
+  background-color: HSL(73, 100%, 80%);
+  margin-top: 20px;
+}
+
+li {
+  border: 1px solid black;
+  padding: 10px;
+  margin: 1px;
+}
+
+.footer {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: grey;
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+@media (max-width: 670px) {
+  h1 {
+    padding: 20px 20px;
+    text-align: center;
+  }
+
+  .emoji {
+    font-size: 50px;
+    margin-bottom: 20px;
+  }
+
+
+  input[type="text"] {
+    height: 20px;
+    width: 280px;
+    font-size: 25px;
+  }
+
+  .searchStatus {
+    font-size: 14px;
+  }
+
+  li {
+    font-size: 14px;
+  }
+  footer {
+    text-align: center;
+  }
+}
+
+@media (max-width: 550px) {
+
+  .searchStatus {
+    font-size: 14px;
+    width: 300px;
+    text-align: center;
+  }
+
+  li {
+    font-size: 14px;
+    width: 250px;
+    margin-right: 30px;
+  }
+  .footer {
+    text-align: center;
+  }
 }
